# mimsy-purport

./: README.md  manage.py  pyproject.toml
basecms/: models.py
basecms/migrations/: 0001_initial.py
main/: settings.py  urls.py  wsgi.py
main/templates/: base.html
main/templates/basecms/: content_page.html  home_page.html
tests/: test_mimsy_purport.py
